# Bank-System

./: README.md  SequenceDiagram.drawio
Client/: CMakeLists.txt  client.cpp  client.h  control.cpp  control.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  sockethandler.cpp  sockethandler.h  transhistory.cpp  transhistory.h  transhistory.ui  view.cpp  view.h
Server/: CMakeLists.txt.user.ae47847  CMakeLists.txt.user.c5fc1e6  clienthandler.cpp  clienthandler.h  database.cpp  datebasehandler.cpp  datebasehandler.h  requesthandler.cpp  requesthandler.h  server.cpp  server.h
